--- a/src/classes/CalloutsClassTest.cls
+++ b/src/classes/CalloutsClassTest.cls
@@ -4,17 +4,17 @@ public class CalloutsClassTest {
 	public static Account configAccount(){
 		Id personAccount = Schema.SObjectType.Account.getRecordTypeInfosByName().get('Person Account').getRecordTypeId();
 
-		Account account = new Account();
-		account.Store__c = 'Virgin Wines';
-		account.PersonEmail = 'test@test.com';
-		account.Salutation = 'Mr';
-		account.FirstName = 'FirstTest';
-		account.LastName = 'LastTest';
-		account.Phone = '1234567890';
+		Account account 		= new Account();
+		account.Store__c 		= 'Virgin Wines';
+		account.PersonEmail 	= 'test@test.com';
+		account.Salutation 		= 'Mr';
+		account.FirstName 		= 'FirstTest';
+		account.LastName 		= 'LastTest';
+		account.Phone 			= '1234567890';
 		account.PersonHomePhone = '1234567890';
 		account.PersonOtherPhone = '1234567890';
 		account.PersonBirthdate = Date.today() - 100;
-		account.RecordTypeId = personAccount;
+		account.RecordTypeId 	= personAccount;
 
 		return account;
 	}
@@ -288,7 +288,7 @@ public class CalloutsClassTest {
 		insert subscriptions;
 
 		Test.startTest();
-		subscriptions.Skip_Reason__c = 'Need a break';
+		subscriptions.Skip_Reason__c = 'BRK';
 		subscriptions.Cancel_Reason__c = 'test';
 		update subscriptions;
 		Test.stopTest();
@@ -339,7 +339,7 @@ public class CalloutsClassTest {
 
 		Test.startTest();
 		//Update #1: Cancel Reason
-		winebank.Cancel_Reason__c = 'Customer Failure - Money/Cannot Afford';
+		winebank.Cancel_Reason__c = 'CF Cannot Afford';
 		//Update #2: Holiday
 		winebank.Holiday_Start_Date__c = Date.today();
 		winebank.Holiday_End_Date__c = Date.today().addDays(1);
